--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   intro_slider: ^2.3.3
+  flutter_swiper: ^1.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
