--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   intro_slider: ^2.3.3
   flutter_swiper: ^1.1.6
+  hexcolor: ^1.0.4
+  keyboard_attachable: ^1.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
