--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   hexcolor: ^1.0.4
   keyboard_attachable: ^1.0.3
+  flutter_rating_bar: ^3.0.1+1
 
 
   # The following adds the Cupertino Icons font to your application.
