--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   hexcolor: ^1.0.4
   keyboard_attachable: ^1.0.3
   flutter_rating_bar: ^3.0.1+1
+  percent_indicator: ^2.1.7+2
 
 
   # The following adds the Cupertino Icons font to your application.
