--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   uiblock: ^0.2.0
   http: ^0.12.2
   flutter_spinkit: 4.1.2
+  localstorage: 3.0.1+4
 
 
   # The following adds the Cupertino Icons font to your application.
