--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   keyboard_attachable: ^1.0.3
   flutter_rating_bar: ^3.0.1+1
   percent_indicator: ^2.1.7+2
-  shared_preferences: ^0.4.2
+  shared_preferences: ^0.5.12+2
   provider: ^3.0.0
   intl: ^0.16.1
   uiblock: ^0.2.0
