--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   localstorage: 3.0.1+4
   grouped_buttons: ^1.0.4
   flutter_html: ^1.0.2
+  lodash_dart: ^0.0.7
 
 
   # The following adds the Cupertino Icons font to your application.
