--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   grouped_buttons: ^1.0.4
   flutter_html: ^1.0.2
   lodash_dart: ^0.0.7
+  cached_network_image: ^2.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
