--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_spinkit: 4.1.2
   localstorage: 3.0.1+4
   grouped_buttons: ^1.0.4
+  dropdown_formfield: ^0.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
