--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   localstorage: 3.0.1+4
   grouped_buttons: ^1.0.4
   dropdown_formfield: ^0.1.3
+  flutter_signin_button: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
