--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   waterfall_flow: ^2.0.3
   lodash_dart: ^0.0.7
   cached_network_image: ^2.3.3
+  modal_bottom_sheet: ^0.2.2
+  google_maps_flutter: ^0.5.13
+  geolocator: ^6.1.0
+  search_map_place: ^0.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
