--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   grouped_buttons: ^1.0.4
   dropdown_formfield: ^0.1.3
   flutter_signin_button: ^1.1.0
+  dotted_line: ^2.0.1
+  readmore: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
