--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   google_maps_flutter: ^0.5.13
   geolocator: ^6.1.0
   search_map_place: ^0.3.0
+  firebase_auth: ^0.18.1+2
+  sms_autofill: ^1.2.6
 
 
   # The following adds the Cupertino Icons font to your application.
