--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   firebase_auth: ^0.18.1+2
   sms_autofill: ^1.2.6
   dio: ^3.0.10
+  file_picker: ^2.0.11
+
 
 
   # The following adds the Cupertino Icons font to your application.
