--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   flutter_signin_button: ^1.1.0
   dotted_line: ^2.0.1
   readmore: ^1.0.0
-  dio: ^3.0.10
+  cached_network_image: ^2.3.3
   flutter_html: ^1.0.2
 
 
