--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_html: ^1.0.2
   waterfall_flow: ^2.0.3
   lodash_dart: ^0.0.7
+  gradient_text: ^1.0.2
   cached_network_image: ^2.3.3
   modal_bottom_sheet: ^0.2.2
   google_maps_flutter: ^0.5.13
@@ -54,6 +55,7 @@ dependencies:
   dio: ^3.0.10
   file_picker: ^2.0.11
   fluttertoast: ^7.1.1
+  date_format: ^1.0.9
 
 
   # The following adds the Cupertino Icons font to your application.
