--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   file_picker: ^2.0.11
   fluttertoast: ^7.1.1
   date_format: ^1.0.9
-
+  css_text: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
