--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   dio: ^3.0.10
   file_picker: ^2.0.11
   fluttertoast: ^7.1.1
+  agora_rtc_engine: ^3.1.3
+  permission_handler: ^5.0.1+1
+  agora_rtm: ^0.9.14
+  flutter_countdown_timer: ^1.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
