--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   readmore: ^1.0.0
   firebase_auth: ^0.18.1+2
   sms_autofill: ^1.2.6
+  pull_to_refresh: ^1.6.1
   dio: ^3.0.10
   file_picker: ^2.0.11
   fluttertoast: ^7.1.1
@@ -59,7 +60,6 @@ dependencies:
   permission_handler: ^5.0.1+1
   agora_rtm: ^0.9.14
   flutter_countdown_timer: ^1.4.0
-
   date_format: ^1.0.9
   css_text: ^2.1.0
   link: ^1.1.0
