--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,5 +76,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.guava:guava:27.0.1-android'
     implementation 'com.android.support:multidex:1.0.3'
 }
