--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,7 @@ flutter:
   - assets/images/contact/
   - assets/images/home/
   - assets/images/bottomNavbar/
+  - assets/images/forum/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
