--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,10 @@ flutter:
   - assets/images/home/
   - assets/images/bottomNavbar/
   - assets/images/forum/
+  - assets/images/bantuan/
+  - assets/images/browse/skincare/
+  - assets/images/browse/tools/
+  - assets/images/browse/hair/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
