--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,8 +52,8 @@ android {
         minSdkVersion 23
         targetSdkVersion 29
         multiDexEnabled true
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 4
+        versionName "2.0"
     }
     signingConfigs {
         release {
