--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   google_sign_in: ^4.5.3
   flutter_twitter_login: ^1.1.0
   flutter_facebook_auth: ^1.0.0
+  url_launcher: 5.4.2
+  flutter_webview_plugin: ^0.3.11
 
 
 
