--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,7 @@ flutter:
   - assets/images/browse/tools/
   - assets/images/browse/hair/
   - assets/images/browse/concern/
+  - assets/images/kulit/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
