--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   flutter_facebook_auth: ^1.0.0
   url_launcher: 5.4.2
   flutter_webview_plugin: ^0.3.11
+  like_button: ^1.0.4
 
 
 
