--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,6 +109,7 @@ flutter:
   - assets/images/browse/hair/
   - assets/images/browse/concern/
   - assets/images/kulit/
+  - assets/images/happySkin/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
