--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,7 @@ flutter:
   - assets/images/happySkin/
   - assets/js/
   - assets/images/promosi/
+  - assets/images/keuntunganHappySkin/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
