--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:usesCleartextTraffic="true"
-            android:hardwareAccelerated="true"
+            android:hardwareAccelerated="false"
             android:allowBackup="true"
             android:largeHeap="true"
             android:windowSoftInputMode="adjustResize">
