--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,19 +56,21 @@ dependencies:
   dio: ^3.0.10
   file_picker: ^2.0.11
   fluttertoast: ^7.1.1
-  agora_rtc_engine: ^3.1.3
+  agora_rtc_engine: ^3.1.4
   permission_handler: ^5.0.1+1
   agora_rtm: ^0.9.14
   flutter_countdown_timer: ^1.4.0
   youtube_player_flutter: ^7.0.0+7
   google_sign_in: ^4.5.3
-  flutter_twitter_login: ^1.1.0
+  flutter_twitter_login:
+    git: git://github.com/vudvhitech/flutter_twitter_login.git
   flutter_facebook_auth: ^1.0.0
   url_launcher: 5.4.2
   flutter_webview_plugin: ^0.3.11
   social_share: ^2.0.5
   like_button: ^1.0.4
   flutter_inappwebview: ^4.0.0+4
+  sign_in_with_apple: ^2.5.4
 
 
 
