--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -116,6 +116,7 @@ flutter:
   - assets/js/
   - assets/images/promosi/
   - assets/images/keuntunganHappySkin/
+  - assets/images/category/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
