--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -18,6 +18,18 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.1028517918903-nlaqk81j6cqs0u82trmqf8kurl554c7g</string>
+				<string>twitterkit-fQmhwBfFxVdfHfGXhSiu6R8Yl</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSApplicationCategoryType</key>
@@ -31,16 +43,24 @@
 	</dict>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>this app required to access your media library</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>this app required to access your calendar</string>
 	<key>NSCameraUsageDescription</key>
 	<string>this app required to access your camera</string>
+	<key>NSContactsUsageDescription</key>
+	<string>this app required to access your contact</string>
 	<key>NSDocumentsFolderUsageDescription</key>
 	<string>this app required to access your documents folder</string>
-	<key>NSLocationAlwaysUsageDescription</key>
+	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>this app required to access your location</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>this app required to access your microphone</string>
+	<key>NSMotionUsageDescription</key>
+	<string>this app required to access your motion</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>this app required to access your photo</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>this app required to access your speech recognition</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
