--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   search_map_place: ^0.3.0
   dotted_line: ^2.0.1
   readmore: ^1.0.0
-  firebase_auth: ^0.18.1+2
+  firebase_auth:
   sms_autofill: ^1.2.6
   pull_to_refresh: ^1.6.1
   dio: ^3.0.10
@@ -63,14 +63,16 @@ dependencies:
   youtube_player_flutter: ^7.0.0+7
   google_sign_in: ^4.5.3
   flutter_twitter_login:
-    git: git://github.com/vudvhitech/flutter_twitter_login.git
-  flutter_facebook_auth: ^1.0.0
+    git: 
+      url: https://github.com/Kiruel/flutter_twitter_login
   url_launcher: 5.4.2
-  flutter_webview_plugin: ^0.3.11
+ 
   social_share: ^2.0.5
   like_button: ^1.0.4
   flutter_inappwebview: ^4.0.0+4
-  sign_in_with_apple: ^2.5.4
+  sign_in_with_apple: ^2.5.1
+  apple_sign_in:
+
 
 
 
