--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -27,9 +27,32 @@
 			<array>
 				<string>com.googleusercontent.apps.1028517918903-nlaqk81j6cqs0u82trmqf8kurl554c7g</string>
 				<string>twitterkit-fQmhwBfFxVdfHfGXhSiu6R8Yl</string>
+                <string>fb910461436100463</string>
 			</array>
 		</dict>
 	</array>
+    <key>FacebookAppID</key>
+    <string>910461436100463</string>
+    <key>FacebookDisplayName</key>
+    <string>Ponny Beaute</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>fbapi</string>
+      <string>fbapi20130214</string>
+      <string>fbapi20130410</string>
+      <string>fbapi20130702</string>
+      <string>fbapi20131010</string>
+      <string>fbapi20131219</string>
+      <string>fbapi20140410</string>
+      <string>fbapi20140116</string>
+      <string>fbapi20150313</string>
+      <string>fbapi20150629</string>
+      <string>fbapi20160328</string>
+      <string>fbauth</string>
+      <string>fb-messenger-share-api</string>
+      <string>fbauth2</string>
+      <string>fbshareextension</string>
+    </array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSApplicationCategoryType</key>
