--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,7 @@ flutter:
   - assets/images/promosi/
   - assets/images/keuntunganHappySkin/
   - assets/images/category/
+  - assets/images/konsultasi/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
