--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,9 +62,7 @@ dependencies:
   flutter_countdown_timer: ^1.4.0
   youtube_player_flutter: ^7.0.0+7
   google_sign_in: ^4.5.3
-  flutter_twitter_login:
-    git: 
-      url: https://github.com/Kiruel/flutter_twitter_login
+  flutter_twitter_login: ^1.1.0
   url_launcher: 5.4.2
  
   social_share: ^2.0.5
