--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,8 +52,8 @@ android {
         minSdkVersion 23
         targetSdkVersion 29
         multiDexEnabled true
-        versionCode 19
-        versionName "2.1.5"
+        versionCode 20
+        versionName "2.1.6"
     }
     signingConfigs {
         release {
@@ -81,5 +81,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.guava:guava:27.0.1-android'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
 
 }
