--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ dependencies:
   google_sign_in: ^4.5.3
   flutter_twitter_login: ^1.1.0
   url_launcher: 5.4.2
- 
+  font_awesome_flutter: ^8.11.0
   social_share: ^2.0.5
   like_button: ^1.0.4
   flutter_inappwebview: ^4.0.0+4
