--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,6 +32,10 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
+task wrapper(type: Wrapper){
+    gradleVersion = '2.14.1'
+}
+
 android {
     compileSdkVersion 29
 
