--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
+module:
+  androidX: true # Add this line.
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
