--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,5 +86,5 @@ dependencies {
     implementation 'com.google.guava:guava:27.0.1-android'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
-
+    implementation 'com.facebook.android:facebook-login:5.5.1'
 }
