--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,11 +75,7 @@ dependencies:
   share: ^0.6.3+5
   flutter_phoenix: ^0.1.0
   firebase_messaging: ^7.0.3
-
-
-
-
-
+  package_info: ^0.4.3+4
   date_format: ^1.0.9
   css_text: ^2.1.0
   link: ^1.1.0
