--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,8 +56,8 @@ android {
         minSdkVersion 23
         targetSdkVersion 29
         multiDexEnabled true
-        versionCode 25
-        versionName "2.2.1"
+        versionCode flutterVersionCode.toInteger()
+        versionName flutterVersionName
     }
     signingConfigs {
         release {
