--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   intl: ^0.16.1
   uiblock: ^0.2.0
   http: ^0.12.2
-  flutter_spinkit: 4.1.2
+  flutter_spinkit: ^4.1.2
   localstorage: 3.0.1+4
   grouped_buttons: ^1.0.4
   dropdown_formfield: ^0.1.3
@@ -63,7 +63,7 @@ dependencies:
   youtube_player_flutter: ^7.0.0+7
   google_sign_in: ^4.5.3
   flutter_twitter_login: ^1.1.0
-  url_launcher: 5.4.2
+  url_launcher: ^5.4.2
   font_awesome_flutter: ^8.11.0
   social_share: ^2.0.5
   like_button: ^1.0.4
@@ -79,6 +79,7 @@ dependencies:
   date_format: ^1.0.9
   css_text: ^2.1.0
   link: ^1.1.0
+  flutter_icons: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
