--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   css_text: ^2.1.0
   link: ^1.1.0
   flutter_icons: ^1.1.0
+  qr_code_scanner: ^0.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
