fix iphone crash (youtube player)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   agora_rtm: ^0.9.14
   flutter_countdown_timer: ^1.4.0
   youtube_player_flutter: ^7.0.0+7
+  flutter_youtube_view: ^1.1.10
   google_sign_in: ^4.5.3
   flutter_twitter_login:
     git:
